Fixed overflow of mobile menu

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
@@ -95,8 +96,8 @@ nav li:hover::after{
     position: absolute;
     top: 80px;
     right: -300px;
-    width: 240px;
-    height: 100vh;
+    width: 300px;
+    height: 100%;
     background-color: #f5f5f5;
     box-shadow: 0 40px 60px rgb(0, 0, 0, 0.1);
     padding: 40px 0 0 10px;
@@ -121,6 +122,7 @@ nav li:hover::after{
     font-size: 2rem;
     cursor: pointer;
   }
+  
 }
 
 /* header */
@@ -130,6 +132,7 @@ nav li:hover::after{
   justify-content: center;
   text-align: center;
   height: 100vh;
+  margin: 0 auto;
 }
 
 .left-container {
@@ -154,7 +157,6 @@ nav li:hover::after{
   background-color: rgb(252, 211, 218);
   gap: 1.5rem;
   text-align: center;
-  padding: 1rem;
 }
 
 .right-container>:nth-child(1) {
@@ -182,6 +184,7 @@ nav li:hover::after{
 }
 
 .hero-button {
-  width: 6rem;
+  width: 8rem;
   height: 2rem;
+  font-size: 1rem;
 }
